# smpi

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  mpi.h  proc.h
src/: CMakeLists.txt  hosts  localhosts
src/smpi/: CMakeLists.txt  allreduce.cpp  barrier.cpp  comm_rank.cpp  comm_size.cpp  common.cpp  finalize.cpp  init.cpp  proc.cpp  recv.cpp  run_smartnic.cpp  send.cpp
src/smpirun/: CMakeLists.txt  smpirun.py
src/test/: CMakeLists.txt  check_allreduce_sparse.cpp  check_allreduce_sparse.output  check_allreduce_sparse1.input  check_allreduce_sparse2.input  hello.cpp  test_allreduce_sparse.cpp  test_bandwidth.cpp  test_barrier.cpp
