CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(SMPI)
INCLUDE_DIRECTORIES(include)
SET(CMAKE_BUILD_TYPE DEBUG)
SET(CMAKE_CXX_FLAGS_DEBUG "-g -Wall")
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/libs)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

ADD_COMPILE_OPTIONS(-std=c++11)

SET(CMAKE_MACOSX_RPATH 0)
ADD_SUBDIRECTORY(src)


MESSAGE("PROJECT BINARY DIR = " ${PROJECT_BINARY_DIR})
MESSAGE("CMAKE_BUILD_TYPE = " ${CMAKE_BUILD_TYPE})
MESSAGE("CMAKE_INSTALL_PREFIX = " ${CMAKE_INSTALL_PREFIX})




