CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(SMPI)
INCLUDE_DIRECTORIES(include)
SET(CMAKE_BUILD_TYPE RELEASE)
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/libs)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

option(BREAKDOWN_ANALYSIS OFF)
IF (BREAKDOWN_ANALYSIS)
    ADD_DEFINITIONS(-DBREAKDOWN_ANALYSIS)
ENDIF()

ADD_COMPILE_OPTIONS(-std=c++11)

SET(CMAKE_MACOSX_RPATH 0)
ADD_SUBDIRECTORY(src)


MESSAGE("PROJECT BINARY DIR = " ${PROJECT_BINARY_DIR})
MESSAGE("CMAKE_BUILD_TYPE = " ${CMAKE_BUILD_TYPE})
MESSAGE("CMAKE_INSTALL_PREFIX = " ${CMAKE_INSTALL_PREFIX})
MESSAGE("BREAKDOWN_ANALYSIS = " ${BREAKDOWN_ANALYSIS})