ADD_EXECUTABLE(hello hello.cpp)
ADD_EXECUTABLE(test_barrier test_barrier.cpp)
ADD_EXECUTABLE(test_allreduce_sparse test_allreduce_sparse.cpp)
ADD_EXECUTABLE(test_bandwidth test_bandwidth.cpp)
TARGET_LINK_LIBRARIES(hello smpi)
TARGET_LINK_LIBRARIES(test_barrier smpi)
TARGET_LINK_LIBRARIES(test_allreduce_sparse smpi)
TARGET_LINK_LIBRARIES(test_bandwidth smpi)